split js code into files working with moduls , fix the overflow when the piec spawn , fix the pieces offest , fix the board's border

--- a/Style/style.css
+++ b/Style/style.css
@@ -60,22 +60,36 @@ body::before {
 #board-container {
   position: relative;
   width: 300px;   
-  height: 600px; 
+  height: 600px;
+  border: 2px solid #CFCFCF;
+  box-sizing: content-box; 
+  overflow: hidden; 
 }
 
 #board {
-  display: grid;
-  grid-template-columns: repeat(10, 30px);
-  grid-template-rows: repeat(20, 30px);
   background: #212121;
-  border: 2px solid #CFCFCF;
   box-sizing: border-box;
   width: 300px;
   height: 600px;
   position: absolute;
+  z-index: 1;
+  top: 0; left: 0; 
+}
+
+
+#board::before {
+  content: "";
+  position: absolute;
   top: 0;
   left: 0;
-  z-index: 1; 
+  width: 100%;
+  height: 100%;
+  background-image:
+    linear-gradient(to right, #333 1px, transparent 1px),
+    linear-gradient(to bottom, #333 1px, transparent 1px);
+  background-size: 30px 30px;
+  z-index: 2; 
+  pointer-events: none;
 }
 
 #sidebar-left {
@@ -112,13 +126,6 @@ body::before {
 
 h2 {
   margin: 4px;
-}
-
-.cell {
-  width: 30px;
-  height: 30px;
-  border: 1px solid #333;
-  background: #212121;
 }
 
 #score, #lines, #level, #timer, #lives {
@@ -165,14 +172,6 @@ h2 {
   padding: 3px;
 }
 
-#hold .cell {
-  width: 20px;
-  height: 20px;
-  border: 1px solid #333;
-  background: #212121;
-  border-radius: 2px;
-}
-
 #next {
   display: flex;
   flex-direction: column;
@@ -195,14 +194,6 @@ h2 {
   padding: 3px;
 }
 
-.next-preview .cell {
-  width: 20px;
-  height: 20px;
-  border: 1px solid #333;
-  background: #212121;
-  border-radius: 2px;
-}
-
 .hit-drop-animation {
   animation: hitDrop 0.3s ease forwards;
 }
@@ -220,6 +211,10 @@ h2 {
   z-index: 10;
 }
 
+#locked-pieces-layer {
+  z-index: 4;
+}
+
 #ghost-piece-layer {
   z-index: 5;
   opacity: 0.3;
@@ -230,7 +225,7 @@ h2 {
   width: 30px; 
   height: 30px; 
   box-sizing: border-box;
-  border: 1px solid #333;
+  border: 1px solid #111; /
 }
 
 #pause-menu {
